welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:23: error: ')' expected but 'else' found.
    } else {
      ^